==> NWPU-DanceRobotBase-RescueTeam/Explorer-Electronic/electric-code/remote control/小车/HARDWARE/OLED/OLED.c <==
#include <stdio.h>
#include "OLED.h"
#include "delay.h"
#include "key.h"
#include "iwdg.h"

void Show_Start(void)
{
	TIM_Cmd(TIM5, DISABLE);
	LCD_CLS();
	LCD_P16X16Str(2, 1, "小援小援", RED, BLACK);
	LCD_P16X16Str(0, 2, "一路火花带闪电！", CYAN, BLACK);
	LCD_P16X16Str(0, 4, "开机中", YELLOW, BLACK);
	delay_ms(300);
	LCD_P8X16Str(6, 4, "..", YELLOW, BLACK);
	delay_ms(300);
	IWDG_Feed();
	LCD_P8X16Str(8, 4, "..", YELLOW, BLACK);
	delay_ms(300);
	LCD_P8X16Str(10, 4, "..", YELLOW, BLACK);
	delay_ms(200);
	LCD_P8X16Str(12, 4, "..", YELLOW, BLACK);
	delay_ms(200);
	IWDG_Feed();
	LCD_P8X16Str(14, 4, "..", YELLOW, BLACK);
	delay_ms(200);
	LCD_CLS();   //OLED清屏
	TIM_Cmd(TIM5, ENABLE);
}

void LCD_init(void)
{
    GPIO_InitTypeDef GPIO_InitStructure;
	
    RCC_AHB1PeriphClockCmd(RCC_AHB1Periph_GPIOB, ENABLE);//使能 PORTA~E,PORTG 时钟
	
	GPIO_InitStructure.GPIO_Pin = GPIO_Pin_0 | GPIO_Pin_1 | GPIO_Pin_10 | GPIO_Pin_12 | GPIO_Pin_15 ;
    GPIO_InitStructure.GPIO_Mode = GPIO_Mode_OUT;//普通输出模式
    GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;//推挽输出
    GPIO_InitStructure.GPIO_Speed = GPIO_Speed_100MHz;//100MHz
    GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_UP;//上拉
	
    GPIO_Init(GPIOB, &GPIO_InitStructure);//初始化
    //初始化 
  	LQTFT_A0=1;
   	LQTFT_SDA=1;
  	LQTFT_SCK=1;
  	LQTFT_CS=1; 
	
	LQTFT_RST=0;   
    delay_ms(200);
    LQTFT_RST=1;                     
    delay_ms(50); 
    LCD_write_command(0x11);//start OSC
    delay_ms(100);  
					  
	LCD_write_command(0xB1);//frame rate control
    LCD_write_para8(0x05);   
    LCD_write_para8(0x3A);
    LCD_write_command(0x36);//镜像控制?
    LCD_write_para8(0x08);  //	
    LCD_write_command(0xB2);
    LCD_write_para8(0x05);    
    LCD_write_para8(0x3A);	
    LCD_write_command(0xB3);
    LCD_write_para8(0x05);    
    LCD_write_para8(0x3A);
    LCD_write_para8(0x05);   
    LCD_write_para8(0x3A);	
    LCD_write_command(0xB4);//inversion setting
    LCD_write_para8(0x00);  //0x00=dot inversion	
    LCD_write_command(0xC0);//Power Control 1
    LCD_write_para8(0xAA);  //AVDD=5V;GVDD=4.2V
    LCD_write_para8(0x0A);  //GVCL=-4.2V
    LCD_write_para8(0x84);  //Mode=AUTO;VRHP=VRHN=0	
    LCD_write_command(0xC1);//Power Control 2
    LCD_write_para8(0xC0);  //V25=2.4V;VGH=2AVDD+VGH25-0.5=11.9V;VGL=-7.5V	                           
    LCD_write_command(0xC2);//Power Control 3
    LCD_write_para8(0x0D);  //
    LCD_write_para8(0x00);  //	
    LCD_write_command(0xC3);//Power Control 4
    LCD_write_para8(0x8D);  //
    LCD_write_para8(0x2A);  //	
    LCD_write_command(0xC4);//Power Control 5
    LCD_write_para8(0x8D);
    LCD_write_para8(0xEE);
    LCD_write_command(0xC5);//VCOM setting
    LCD_write_para8(0x06);  //
    LCD_write_command(0xE0);
    LCD_write_para8(0x06);
    LCD_write_para8(0x1C);
    LCD_write_para8(0x10);	
    LCD_write_para8(0x14);
    LCD_write_para8(0x30);	
    LCD_write_para8(0x2B);
    LCD_write_para8(0x24);
    LCD_write_para8(0x29);
    LCD_write_para8(0x28);
    LCD_write_para8(0x26);
    LCD_write_para8(0x2E);
    LCD_write_para8(0x39);
    LCD_write_para8(0x00);
    LCD_write_para8(0x02);
    LCD_write_para8(0x01);
    LCD_write_para8(0x10);	
    LCD_write_command(0xE1);
    LCD_write_para8(0x06);
    LCD_write_para8(0x1C);
    LCD_write_para8(0x10);	
    LCD_write_para8(0x14);
    LCD_write_para8(0x30);	
    LCD_write_para8(0x2B);
    LCD_write_para8(0x24);
    LCD_write_para8(0x29);
    LCD_write_para8(0x28);
    LCD_write_para8(0x26);
    LCD_write_para8(0x2E);
    LCD_write_para8(0x39);
    LCD_write_para8(0x00);
    LCD_write_para8(0x02);
    LCD_write_para8(0x01);
    LCD_write_para8(0x10);
    LCD_write_command(0x3A);//
    LCD_write_para8(0x05);  //RGB 16-bit	
    LCD_write_command(0x29);//display on	
    delay_ms(10);   
    LCD_display_full(RED);
}

void LCD_write_command(unsigned char cmd)
{
	unsigned char i;

	LQTFT_A0=0;	 						//A0=0发送命令
	LQTFT_CS=0;
	for(i=0;i<8;i++)
	{
		LQTFT_SCK=0;
		if((cmd&0x80)==0x80)	  	//高位先发送
			LQTFT_SDA=1;
		else		
			LQTFT_SDA=0;
		//LQTFT_SDA =((0x80&cmd>0)?1:0);
		LQTFT_SCK = 1;
		cmd = (cmd<<1);

	}
    LQTFT_CS=1;
}

void LCD_write_para8(unsigned char dat)
{  
	unsigned char i;

	LQTFT_A0=1;			   				//A0=1发送数据
	LQTFT_CS=0;				
	for(i=0;i<8;i++)
	{
		LQTFT_SCK=0;
		if((dat&0x80)==0x80)
			LQTFT_SDA=1;
		else
			LQTFT_SDA=0;  	
		//LQTFT_SDA =((0x80&dat>0)?1:0);
		LQTFT_SCK = 1;
		dat = (dat<<1);

	}
	LQTFT_CS=1;
}

void LCD_write_para16(unsigned int dat)
{  		 
	unsigned char i,buf;
	LQTFT_A0=1;
	LQTFT_CS=0;				

	buf = (unsigned char)(0xFF&(dat>>8));
	for(i=0;i<8;i++)
	{
		LQTFT_SCK=0;
		if((buf&0x80)==0x80)
			LQTFT_SDA=1;
		else
			LQTFT_SDA=0;  		
		//LQTFT_SDA =((0x80&buf>0)?1:0);
		LQTFT_SCK=1;
		buf=(buf<<1);

	}
	LQTFT_CS=1;

	buf = (unsigned char)(0xFF&dat);
	LQTFT_CS=0;
	for(i=0;i<8;i++)
	{
		LQTFT_SCK=0;
	  if((buf&0x80)==0x80)
			LQTFT_SDA=1;
		else
			LQTFT_SDA=0;
		//LQTFT_SDA =((0x80&buf>0)?1:0);
		LQTFT_SCK =1;
		buf=(buf<<1);
	}
	LQTFT_CS=1; 
}
